--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -160,10 +160,8 @@
 
     <ImageButton
         android:id="@+id/btn_img_sos"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_902300_emergency_help_location_rescue_sos_icon"
@@ -174,8 +172,6 @@
         android:id="@+id/btn_img_indoor"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_30102_home_house_icon"
@@ -221,7 +217,7 @@
         android:id="@+id/divider"
         android:layout_width="400dp"
         android:layout_height="2dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="4dp"
         android:background="@color/light_blue_900"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -232,9 +228,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="304dp"
-        android:layout_height="345dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="6dp"
+        android:layout_height="350dp"
         android:cropToPadding="true"
         android:padding="1dp"
         android:scaleType="fitXY"
@@ -247,9 +241,7 @@
     <VideoView
         android:id="@+id/video_player"
         android:layout_width="304dp"
-        android:layout_height="345dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="6dp"
+        android:layout_height="350dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toStartOf="@+id/divider2"
         app:layout_constraintHorizontal_bias="1.0"
@@ -260,8 +252,6 @@
         android:id="@+id/img_btn_drug"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_211007_capsule_drug_drugs_healthcare_medicine_icon"
@@ -272,7 +262,6 @@
         android:id="@+id/img_btn_call2"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_070528_call_contact_emergency_hospital_medical_icon"
@@ -284,7 +273,6 @@
         android:id="@+id/img_btn_call1"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_070528_call_contact_emergency_hospital_medical_icon"
@@ -296,7 +284,6 @@
         android:id="@+id/img_btn_location"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_961978_location_map_icon"
@@ -308,7 +295,6 @@
         android:id="@+id/img_btn_location2"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:layout_marginTop="16dp"
         android:backgroundTint="@color/white"
         android:scaleType="fitXY"
         android:src="@drawable/_961978_location_map_icon"
@@ -318,11 +304,11 @@
 
     <View
         android:id="@+id/divider3"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="2dp"
-        android:layout_marginTop="8dp"
         android:background="@color/light_blue_900"
         android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
         tools:visibility="visible" />
@@ -331,7 +317,6 @@
         android:id="@+id/divider6"
         android:layout_width="400dp"
         android:layout_height="2dp"
-        android:layout_marginTop="8dp"
         android:background="@color/light_blue_900"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -361,9 +346,8 @@
     <View
         android:id="@+id/divider2"
         android:layout_width="2dp"
-        android:layout_height="430dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="16dp"
+        android:layout_height="420dp"
+        android:layout_marginTop="4dp"
         android:background="@color/light_blue_900"
         android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/img_btn_location"
